--- a/css/style.css
+++ b/css/style.css
@@ -75,3 +75,24 @@ body {
 .signin-form input[type="submit"]:hover {
     background-color: #0056b3;
 }
+
+/* INDEX */
+body {
+    font-family: Arial, sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+    background-color: #f0f0f0;
+}
+
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+    background-color: #333;
+    color: #fff;
+    justify-self: stretch;
+}
