--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,3 @@
-/* REGISTER */
-
-
-/* SIGN IN */
-
 
 /* INDEX */
 body {
@@ -15,12 +10,25 @@ body {
     background-color: #f0f0f0;
 }
 
-.navbar {
+.nav-bar {
+    width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
-    padding: 10px 20px;
-    background-color: #333;
-    color: #fff;
-    justify-self: stretch;
+    position: fixed;
+    background-color: chartreuse;
+    top: 0%;
+    right: 0%;
+}
+
+.nav-bar a{
+    text-decoration: bold;
+    color: #333;
+    font-size: 1.2rem;
+    font-weight: bold;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    padding: 10px;
+    border-radius: 5px;
+    transition: background-color 0.3s;
 }
