--- a/css/style.css
+++ b/css/style.css
@@ -1,34 +1,68 @@
-
 /* INDEX */
 body {
-    font-family: Arial, sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-    background-color: #f0f0f0;
+  font-family: Arial, sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+  background-color: #f0f0f0;
 }
 
 .nav-bar {
-    width: 100%;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    position: fixed;
-    background-color: chartreuse;
-    top: 0%;
-    right: 0%;
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  position: fixed;
+  background-color: chartreuse;
+  top: 0%;
+  right: 0%;
 }
 
-.nav-bar a{
-    text-decoration: bold;
-    color: #333;
-    font-size: 1.2rem;
-    font-weight: bold;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    padding: 10px;
-    border-radius: 5px;
-    transition: background-color 0.3s;
+.nav-bar a {
+  text-decoration: bold;
+  color: #333;
+  font-size: 1.2rem;
+  font-weight: bold;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  padding: 10px;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+}
+
+.container {
+  width: 100%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.title {
+  align-items: center;
+  text-align: center;
+    margin: 0 auto;
+}
+
+.title h1 {
+  font-size: 2.5rem;
+  color: #333;
+}
+
+.title h2{
+    font-size: 1.5rem;
+    color: #8a6f6f;
+}
+.footer {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  background-color: chartreuse;
+  bottom: 0%;
+  right: 0%;
 }
