--- a/css/style.css
+++ b/css/style.css
@@ -1,61 +1,83 @@
 /* INDEX */
-body {
-  font-family: Arial, sans-serif;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
+* {
   margin: 0;
-  background-color: #f0f0f0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.nav-bar {
-  width: 100%;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  position: fixed;
+h1, h2, h3{
+  font-family: sans-serif;
+  font-weight: 900;
+  line-height: 1.5;
+}
+
+header {
   background-color: chartreuse;
-  top: 0%;
-  right: 0%;
+  color: #fff;
+  overflow: hidden;
 }
-
-.nav-bar a {
-  text-decoration: bold;
-  color: #333;
+.container-fluid {
+  padding: 3% 15%;
+}
+header .navbar-header {
+  background-color: chartreuse !important;
+  margin-bottom: 4.5rem;
+}
+.navbar-expand-lg .navbar-collapse {
+  justify-content: flex-end;
+}
+.navbar-brand {
+  font-weight: bold;
+  font-size: 200%;
+  color: #fff;
+}
+.navbar-brand:hover {
+  color: #fff;
+}
+.nav-link {
   font-size: 1.2rem;
   font-weight: bold;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  padding: 10px;
-  border-radius: 5px;
-  transition: background-color 0.3s;
+  color: #fff;
+  opacity: 0.5;
+  margin: 0 15px;
+  text-align: right;
 }
-
-.container {
-  width: 100%;
-  margin: 0 auto;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-wrap: wrap;
+.nav-link:hover {
+  opacity: 0.8;
+  color: #fff;
 }
-
-.title {
-  align-items: center;
-  text-align: center;
-  margin: 0 auto;
+.nav-link:focus {
+  opacity: 0.9;
+  color: #fff;
 }
-
-.title h1 {
-  font-size: 2.5rem;
-  color: #333;
+.navbar-toggler {
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  /* border-width: 1px;
+  border-style: solid;
+  border-color: rgba(255, 255, 255, 0.5); */
 }
-
-.title h2 {
+.navbar-toggler:focus {
+  box-shadow: 2px 2px 0 0 rgba(255, 255, 255, 0.5);
+}
+.navbar-toggler > i {
   font-size: 1.5rem;
-  color: #8a6f6f;
+  color: #fff;
 }
+
+.big-heading{
+  font-size: 3.5rem;
+  font-weight: 400;
+  text-align: center;
+}
+
+.text-body-secondary {
+  font-size: 1.5rem;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 3rem;
+}
+
+/* FOOTER */
 .footer {
   width: 100%;
   display: flex;
