--- a/css/index.css
+++ b/css/index.css
@@ -5,7 +5,9 @@
   box-sizing: border-box;
 }
 
-h1, h2, h3{
+h1,
+h2,
+h3 {
   font-family: sans-serif;
   font-weight: 900;
   line-height: 1.5;
@@ -35,10 +37,10 @@ header .navbar-header {
   color: #fff;
 }
 .nav-link {
-  font-size: 1.2rem;
+  font-size: 15px;
   font-weight: bold;
   color: #fff;
-  opacity: 0.5;
+  opacity: 0.6;
   margin: 0 15px;
   text-align: right;
 }
@@ -64,56 +66,86 @@ header .navbar-header {
   color: #fff;
 }
 
-.big-heading{
-  font-size: 3.5rem;
-  font-weight: 400;
+.col-lg-6 {
+  padding: 3%;
   text-align: center;
 }
 
 .text-body-secondary {
-  font-size: 1.5rem;
+  font-size: 3rem;
   font-weight: bold;
   text-align: center;
   margin-bottom: 3rem;
 }
 
+.big-heading {
+  font-size: 5rem;
+  font-weight: 400;
+  text-align: center;
+  font-style: italic;
+  margin-bottom: 2.25rem;
+}
 
-.feature-box{
+.feature-box {
   text-align: center;
   padding: 5%;
 }
-.feature-title{
+.feature-title {
   font-size: 1.5rem;
 }
-.feature-box p{
+.feature-box p {
   color: #8f8f8f;
   font-family: sans-serif;
   font-weight: lighter;
 }
-.feature-box > i{
+.feature-box > i {
   font-size: 4rem;
   color: #ef8172;
 }
-.feature-box > i:hover{
+.feature-box > i:hover {
   color: #ff4c68;
 }
 
-.carousel-item{
+.carousel-item {
   text-align: center;
 }
-.carousel-item > h2{
+.carousel-item > h2 {
   font-size: 3rem;
   line-height: 1.5;
 }
-.carousel-item > img{
+.carousel-item > img {
   width: 10%;
   border-radius: 50%;
   margin: 20px;
 }
 
-#carouselExample{
+.carousel-item > p {
+  font-size: 1.5rem;
+  color: #8f8f8f;
+  font-family: sans-serif;
+  font-weight: lighter;
+}
+
+.carousel-item > a {
+  color: #8f8f8f;
+  padding: 10px 20px;
+  border-radius: 5px;
+  text-decoration: none;
+  font-weight: 200;
+  font-size: 1.5rem;
+}
+
+.carousel-item > a:hover {
+  color: #fff;
+}
+
+#carouselExample {
   margin-top: 5%;
   background-color: chartreuse;
+}
+
+.carousel-inner {
+  padding: 5%;
 }
 
 /* FOOTER */
