--- a/css/index.css
+++ b/css/index.css
@@ -150,6 +150,8 @@ header .navbar-header {
 
 /* FOOTER */
 .footer {
+  margin-top: 50px;
+  padding: 15px 0;
   width: 100%;
   display: flex;
   justify-content: center;
