--- a/css/artist_page.css
+++ b/css/artist_page.css
@@ -39,21 +39,26 @@ main .colored-section {
 .container-fluid {
   padding: 3% 15%;
 }
+
 header .navbar-header {
   background-color: chartreuse !important;
   margin-bottom: 4.5rem;
 }
+
 .navbar-expand-lg .navbar-collapse {
   justify-content: flex-end;
 }
+
 #webBrand {
   font-weight: bold;
   font-size: 150%;
   color: #000;
 }
+
 #webBrand:hover {
   color: #fff;
 }
+
 .nav-link {
   font-size: 15px;
   font-weight: bold;
@@ -62,23 +67,28 @@ header .navbar-header {
   margin: 0 15px;
   text-align: right;
 }
+
 .nav-link:hover {
   opacity: 0.8;
   color: #fff;
 }
+
 .nav-link:focus {
   opacity: 0.9;
   color: #fff;
 }
+
 .navbar-toggler {
   border: 1px solid rgba(255, 255, 255, 0.5);
   /* border-width: 1px;
     border-style: solid;
     border-color: rgba(255, 255, 255, 0.5); */
 }
+
 .navbar-toggler:focus {
   box-shadow: 2px 2px 0 0 rgba(255, 255, 255, 0.5);
 }
+
 .navbar-toggler > i {
   font-size: 1.5rem;
   color: #fff;
@@ -89,7 +99,7 @@ header .navbar-header {
   text-align: center;
   padding: 10px;
   display: flex;
-  width: 30%;
+  width: 50%;
   align-items: center;
   align-content: center;
 }
@@ -101,6 +111,31 @@ header .navbar-header {
   width: 30%;
 }
 
-#mr-morale-the-big-steppers {
-font-size: 22.5px;
+#albums {
+  align-items: center;
+  align-content: center;
+  display: flex;
+  justify-content: center;
+}
+
+.buttons {
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  position: relative;
+  width: 100%;
+}
+
+footer {
+  margin-top: 50px;
+  padding: 15px 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  background-color: chartreuse;
+  bottom: 0%;
+  right: 0%;
+  font-family: cursive;
 }
