--- a/css/artist_page.css
+++ b/css/artist_page.css
@@ -129,6 +129,12 @@ header .navbar-header {
   width: 100%;
 }
 
+.text-center {
+  padding: 15px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 2rem;
+}
+
 P {
   font-size: 1rem;
   font-weight: 2px;
