--- a/css/artist_page.css
+++ b/css/artist_page.css
@@ -141,7 +141,7 @@ P {
   margin-top: 5%;
 }
 
-#footer {
+#footer{
   margin-top: 50px;
   padding: 15px 0;
   width: 100%;
@@ -152,5 +152,11 @@ P {
   background-color: chartreuse;
   bottom: 0%;
   right: 0%;
+  font-family: cursive;
+}
+
+#footer p {
+  font-size: 1rem;
+  font-weight: 2px;
   font-family: cursive;
 }
